Header Section Added

--- a/index.html
+++ b/index.html
@@ -1,12 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer Portfolio</title>
+
+    <!-- CSS Links -->
     <link rel="stylesheet" href="styles/style.css">
+
+    <!-- Gooogle Foots -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    
+    <header class="header">
+        <nav>
+            <h3 class="site-title">Sazz<span class="orrage">ad</span></h3>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <button class="btn-primary"><a href="#">Hire Me</a></button>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="owner-data">
+                <h3 class="banner-getting">Hi, I am</h3>
+                <h2 class="banner-title">Sazzad Hossain</h2>
+                <p class="banner-discription">Shot what able cold new see hold.Friendly as an betrayed formerly he.
+                    Morning because as to society
+                    behaved moments.</p>
+                <button class="btn-primary"><a href="#">Download CV</a></button>
+                <button class="btn-border"><a href="#">Contact Us</a></button>
+            </div>
+            <div class="hardy-image">
+                <img width="400px" src="images/hardy.png" alt="">
+            </div>
+        </div>
+    </header>
+
+
+    <header>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+    <!-- Font Awasome Link -->
+    <script src="https://kit.fontawesome.com/c2e3a1c840.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
