--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </ul>
         </nav>
         <div class="banner">
-            <div class="owner-data">
+            <div class="banner-content">
                 <h3 class="banner-getting">Hi, I am</h3>
                 <h2 class="banner-title">Sazzad Hossain</h2>
                 <p class="banner-discription">Shot what able cold new see hold.Friendly as an betrayed formerly he.
@@ -43,12 +43,33 @@
         </div>
     </header>
 
-
-    <header>
-
-    </header>
     <main>
-
+        <!-- About Section Start -->
+        <section class="about">
+            <h3 class="section-title">About Us</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing
+                simple, clean and slick websites that provide real value to the end user. Thousands of clients have
+                procured exceptional resulfs while working with me. Delivering work within time and budget which meets
+                clients requirements in our mata.</p>
+            <div class="about-info-container">
+                <div class="about-info">
+                    <p class="info-title">Name:</p>
+                    <h4 class="info-description">Sazzad Hossain</h4>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Email:</p>
+                    <h4 class="info-description">developersazzad7@gmail.com</h4>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Date of Birth:</p>
+                    <h4 class="info-description">20 Feb, 2004</h4>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">From :</p>
+                    <h4 class="info-description">Rangpur, Bangladesh</h4>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
