--- a/index.html
+++ b/index.html
@@ -70,6 +70,48 @@
                 </div>
             </div>
         </section>
+        <!-- What I Do Section Start -->
+        <section class="skill-section">
+            <h3 class="section-title">What I do</h3>
+            <p class="section-description">I have more than 10 years experience building software for clients all over
+                the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to
+                find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skill-container">
+                <div class="skill-content">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="skill-title">Vanilla JavaScript</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5
+                        free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill-content">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="skill-title">Vanilla JavaScript</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5
+                        free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill-content">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="skill-title">Vanilla JavaScript</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5
+                        free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill-content">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="skill-title">Vanilla JavaScript</h3>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5
+                        free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
+        <!-- A summary of My Resume Section Start -->
+        <section class="resume">
+            <h3 class="section-title">A summary of My Resume</h3>
+
+        </section>
     </main>
     <footer>
 
