--- a/index.html
+++ b/index.html
@@ -110,6 +110,66 @@
         <!-- A summary of My Resume Section Start -->
         <section class="resume">
             <h3 class="section-title">A summary of My Resume</h3>
+            <div class="resume-container">
+                <div class="resume-box">
+                    <h2 class="resume-main-title">My Education</h2>
+                    <div class="resume-contain">
+                        <h3 class="resume-title">Master in Computer Engineering</h3>
+                        <h5 class="resume-title-desc">Harvard University / 2015 - 2017</h5>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div>
+                    <div class="resume-contain">
+                        <h3 class="resume-title">Master in Computer Engineering</h3>
+                        <h5 class="resume-title-desc">Harvard University / 2015 - 2017</h5>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div>
+                    <div class="resume-contain">
+                        <h3 class="resume-title">Master in Computer Engineering</h3>
+                        <h5 class="resume-title-desc">Harvard University / 2015 - 2017</h5>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div>
+                </div>
+                <div class="resume-box">
+                    <h2 class="resume-main-title">My Experience</h2>
+                    <div class="resume-contain">
+                        <h3 class="resume-title">Sr. Font End Developer</h3>
+                        <h5 class="resume-title-desc">Apple Inc / 2020 - Current</h5>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div>
+                    <div class="resume-contain">
+                        <h3 class="resume-title">Fontend Developer</h3>
+                        <h5 class="resume-title-desc">Dribbble Inc / 2018 - 2022</h5>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div>
+                    <div class="resume-contain">
+                        <h3 class="resume-title">HTML Developer</h3>
+                        <h5 class="resume-title-desc">Adobe Inc / 2017 - 2018</h5>
+                        <p class="resume-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+            <div class="center-btn">
+                <button class="btn-primary"><a href="#">Download CV</a></button>
+            </div>
+
 
         </section>
     </main>
