--- a/index.html
+++ b/index.html
@@ -173,8 +173,27 @@
 
         </section>
     </main>
-    <footer>
+    <footer class="footer-bg">
+        <section class="footer">
+            <div class="footer-box">
+                <h2 class="footer-title">Lets Connect</h2>
+                <p class="footer-description">Please fill out the form on this section to contact with me or call
+                    between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <div class="social-links">
+                    <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                    <a href=""><img src="images/icons/insta.png" alt=""></a>
+                    <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                </div>
+            </div>
+            <div class="footer-box">
+                <h2 class="footer-title">Let’s Message me</h2>
+                <form action="">
+                    <input type="text" placeholder="Enter Your Name" required>
+                    <input type="email" placeholder="Enter Your Email" required>
+                </form>
+            </div>
 
+        </section>
     </footer>
     <!-- Font Awasome Link -->
     <script src="https://kit.fontawesome.com/c2e3a1c840.js" crossorigin="anonymous"></script>
