--- a/index.html
+++ b/index.html
@@ -187,9 +187,11 @@
             </div>
             <div class="footer-box">
                 <h2 class="footer-title">Let’s Message me</h2>
-                <form action="">
+                <form class="contact-us" action="">
                     <input type="text" placeholder="Enter Your Name" required>
                     <input type="email" placeholder="Enter Your Email" required>
+                    <textarea name="" id="" cols="30" rows="6" placeholder="Enter Your Massage"></textarea>
+                    <input type="submit" value="Submit">
                 </form>
             </div>
 
