Finished Our Projects

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
+    <!-- Font Awasome Link -->
+    <script src="https://kit.fontawesome.com/b435c73b55.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -34,8 +36,9 @@
                 <p class="banner-discription">Shot what able cold new see hold.Friendly as an betrayed formerly he.
                     Morning because as to society
                     behaved moments.</p>
-                <button class="btn-primary"><a href="#">Download CV</a></button>
-                <button class="btn-border"><a href="#">Contact Us</a></button>
+                <button class="btn-primary"><a href="#"><i class="fa-solid fa-download"></i> Download
+                        CV</a></button>
+                <button class="btn-border"><a href="#"><i class="fa-solid fa-phone"></i> Contact Us</a></button>
             </div>
             <div class="hardy-image">
                 <img width="400px" src="images/hardy.png" alt="">
@@ -167,7 +170,7 @@
                 </div>
             </div>
             <div class="center-btn">
-                <button class="btn-primary"><a href="#">Download CV</a></button>
+                <button class="btn-primary"><a href="#"><i class="fa-solid fa-download"></i> Download CV</a></button>
             </div>
 
 
@@ -197,8 +200,7 @@
 
         </section>
     </footer>
-    <!-- Font Awasome Link -->
-    <script src="https://kit.fontawesome.com/c2e3a1c840.js" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
