Complete The Projects Responsive for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
                 <p class="banner-discription">Shot what able cold new see hold.Friendly as an betrayed formerly he.
                     Morning because as to society
                     behaved moments.</p>
-                <button class="btn-primary"><a href="#"><i class="fa-solid fa-download"></i> Download
-                        CV</a></button>
-                <button class="btn-border"><a href="#"><i class="fa-solid fa-phone"></i> Contact Us</a></button>
+                <div class="buttons">
+                    <button class="btn-primary"><a href="#"><i class="fa-solid fa-download"></i> Download
+                            CV</a></button>
+                    <button class="btn-border"><a href="#"><i class="fa-solid fa-phone"></i> Contact Us</a></button>
+                </div>
             </div>
             <div class="hardy-image">
                 <img width="400px" src="images/hardy.png" alt="">
@@ -190,7 +192,7 @@
             </div>
             <div class="footer-box">
                 <h2 class="footer-title">Let’s Message me</h2>
-                <form class="contact-us" action="">
+                <form class="contact-us">
                     <input type="text" placeholder="Enter Your Name" required>
                     <input type="email" placeholder="Enter Your Email" required>
                     <textarea name="" id="" cols="30" rows="6" placeholder="Enter Your Massage"></textarea>
